Matt's frontend commits

--- a/pennapps/templates/index.html
+++ b/pennapps/templates/index.html
@@ -1,1 +1,83 @@
-Hi there! It's Nilesh, Seb, and Matt's PennApps project.
+<!doctype html>
+<html lang="en" ng-app="phonecatApp">
+<head>
+  <meta charset="utf-8">
+  <title>Jukify Your Playlists</title>
+  <link rel="stylesheet" href="css/app.css">
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/animations.css">
+  <link href="/twitter-bootstrap/twitter-bootstrap-v2/docs/assets/css/bootstrap.css" rel="stylesheet">
+
+  <script src="lib/jquery/jquery-1.10.2.js"></script>
+  <script src="lib/angular/angular.js"></script>
+  <script src="lib/angular/angular-animate.js"></script>
+  <script src="lib/angular/angular-resource.js"></script>
+  <script src="lib/angular/angular-route.js"></script>
+
+  <script src="js/app.js"></script>
+  <script src="js/animations.js"></script>
+  <script src="js/controllers.js"></script>
+  <script src="js/filters.js"></script>
+  <script src="js/services.js"></script>
+
+  <script src="lib/js/angular.min.js"></script>
+  <script src="http://code.angularjs.org/1.2.13/angular.min.js"></script>
+  <script src="script.js"></script>
+  <script src="protractorTest.js"></script>
+
+
+
+
+
+
+</head>
+<body>
+  <header id="masthead" class="site-header light" role="banner" style="background-color:yellow; height:6px">
+
+  <div class="navbar navbar-fixed-top" style="background-color:yellow">  
+    <div class="navbar-inner">  
+      <div class="container">  
+      <ul class="nav">  
+        <li class="active">  
+          <a class="brand" href="#" style="position:fixed; left:75px">jUKIFY</a>  
+        </li>   
+      </ul>  
+      </div>  
+    </div>  
+  </div>
+<header id="masthead" class="site-header light" role="banner">
+
+  <div class="navbar navbar-fixed-top">  
+    <div class="navbar-inner">  
+      <div class="container">  
+      <ul class="nav">  
+        <li class="active">  
+          <a class="brand" href="#" style="position:fixed; left:105px">jUKIFY</a>  
+        </li>   
+      </ul>  
+      </div>  
+    </div>  
+  </div>
+
+
+
+  <div class="view-container">
+    <div ng-view class="view-frame"></div>
+  </div>
+
+  <footer class="footer" style="background-color:white">
+              <small style="margin-left:5px; position:fixed; bottom:0px; right:0px; background-color:white">Developed by                   
+                <a href="mailto:nakavthekar@gmail.com">Nilesh Kavthekar</a>
+                <a href="http://www.linkedin.com/in/nkavthekar">
+                    <img src="https://dl.dropboxusercontent.com/u/61965692/linkedin.png" alt="linkedin" style="width:1.15%; height:1.15%; position:relative; bottom:2px"/>
+                  </a>,
+                <a href="mailto:rollenseb@gmail.com">Sebastian Rollén</a>, and
+                <a href="mailto:matthewdschulman@gmail.com">Matt Schulman</a>
+                <a href="http://www.linkedin.com/pub/matthew-schulman/61/118/159">
+                    <img src="https://dl.dropboxusercontent.com/u/61965692/linkedin.png" alt="linkedin" style="width:1.15%; height:1.15%; position:relative; bottom:2px"/>
+                  </a>.  
+              </small>
+            </footer>
+
+</body>
+</html>
