--- a/pennapps/templates/partials/phone-list.html
+++ b/pennapps/templates/partials/phone-list.html
@@ -1,3 +1,6 @@
+{% extends "index.html" %}
+{% block content %}
+
 <body class="home page page-id-2692 page-template page-template-page-home-php home-page" style="height:100%; width:100%">
   <div id="fb-root"></div>
   <script>(function(d, s, id) {
@@ -586,3 +589,5 @@
 
 </span>
 </body>
+
+{% endblock %}
