pennapps morning changes, parsing json still does not work

--- a/pennapps/templates/partials/home.html
+++ b/pennapps/templates/partials/home.html
@@ -1,5 +1,4 @@
 {% extends "index.html" %}
 {% block content %}
-<p><a class="btn btn-primary btn-lg" role="button" style="position:relative; top:400px; left: 500px; width:400px; height:200px; font-size:100px; vertical:align: text-bottom" onclick="location.href='/facebook_login'">Sign In</a></p>
-
+<p><a class="btn btn-primary btn-lg" role="button" style="position:relative; top:300px; left: 500px; width:400px; height:200px; font-size:100px; vertical:align: text-bottom" onclick="location.href='/facebook_login'"><span id="buttontext" style="position:relative; top: 80px">Sign In</span></a></p>
 {% endblock %}
